--- a/app/src/main/res/layout/adapter_flight.xml
+++ b/app/src/main/res/layout/adapter_flight.xml
@@ -9,6 +9,7 @@
     app:cardCornerRadius="8dp">
 
     <LinearLayout
+        android:id="@+id/flight"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
