--- a/app/src/main/res/layout/activity_flight_detail.xml
+++ b/app/src/main/res/layout/activity_flight_detail.xml
@@ -69,6 +69,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/arriveDepartAirport"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
